# AI-Intergalactic-Zoological-Social-Multimedia-Agency-Networks-

./: .gitignore  README.md  REPO_AWARENESS.md  pyproject.toml
ai-toolkit/: README.md  requirements.txt
ai-toolkit/agents/: agent_framework.py
ai-toolkit/computer-vision/: cv_toolkit.py
ai-toolkit/data-pipeline/: pipeline.py
ai-toolkit/deployment/: Dockerfile  server.py
ai-toolkit/evaluation/: evaluate.py
ai-toolkit/ml/: train.py
ai-toolkit/nlp/: nlp_example.py
blockchain/: README.md
blockchain/assemblyscript-near/: zoo.ts
blockchain/cadence/: IntergalacticZoo.cdc
blockchain/cairo/: zoo.cairo
blockchain/clarity/: zoo.clar
blockchain/ink/: lib.rs
blockchain/move/: zoo.move
blockchain/rust-anchor/: lib.rs
blockchain/solidity/: IntergalacticZoo.sol
blockchain/tact/: zoo.tact
blockchain/vyper/: IntergalacticZoo.vy
campaigns/: advertising-campaigns.md  marketing-strategies.md
content/: story-campaigns.md
languages/: README.md
languages/cpp/: main.cpp
languages/csharp/: main.cs
languages/elixir/: main.exs
languages/go/: main.go
languages/haskell/: main.hs
languages/java/: Main.java
languages/javascript/: main.js
languages/julia/: main.jl
languages/kotlin/: main.kt
languages/lua/: main.lua
languages/php/: main.php
languages/python/: README.md  main.py
languages/r/: main.R
languages/ruby/: main.rb
languages/rust/: main.rs
languages/scala/: main.scala
languages/shell/: main.sh
languages/swift/: main.swift
languages/typescript/: main.ts
languages/zig/: main.zig
programs/: development-programs.md
src/: __init__.py
tests/: test_blockchain.py  test_curriculum.py  test_evolver.py  test_fitness.py  test_knowledge_base.py  test_operators.py  test_population.py  test_prompt.py  test_prompts.py  test_robotics.py  test_wearable.py
(+24 files in other folders)
