[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "encyclopedia-of-everything-applied"
version = "1.0.0"
description = "Educational, Entertainment, Business Technologies Development Systems — Teaching Robots, Space Aliens & People to Become Better Programmers and Blockchain Developers."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = [
    "education", "blockchain", "robotics", "wearable", "prompt-engineering",
    "AI", "intergalactic"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
encyclopedia = "encyclopedia.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
